Fix quote position so it does not overlap with metadata, fix print preview

--- a/theme/pelican-clean-blog/static/css/article.sass
+++ b/theme/pelican-clean-blog/static/css/article.sass
@@ -17,3 +17,4 @@
   font-style: italic
   text-align: center
   color: #777
+  margin-top: 40px
