--- a/theme/pelican-clean-blog/static/css/responsive.sass
+++ b/theme/pelican-clean-blog/static/css/responsive.sass
@@ -126,6 +126,8 @@
     width: 100%
   .next tr td a
     font-size: 14px
+  #divarticle article
+    text-align: left
   #divpage
     margin: 0 21px 0 21px
     padding: 21px
